@@ -5,6 +5,7 @@ export(bootstrapResults)
 export(calculateBamCoverageByInterval)
 export(calculateGCContentByInterval)
 export(calculateLogRatio)
+export(calculateMappingBiasVcf)
 export(calculatePowerDetectSomatic)
 export(callAlterations)
 export(callAlterationsFromSegmentation)
@@ -50,6 +51,7 @@ importFrom(GenomeInfoDb,sortSeqlevels)
 importFrom(GenomicFeatures,exonsByOverlaps)
 importFrom(GenomicFeatures,transcriptsByOverlaps)
 importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,tile)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rsamtools,ScanBamParam)
