@@ -6,6 +6,8 @@ suppressPackageStartupMessages(library(futile.logger))
 option_list <- list(
     make_option(c("--coveragefiles"), action="store", type="character", default=NULL,
         help="List of input coverage files (supported formats: PureCN, GATK and CNVkit)"),
+    make_option(c("--normal_panel"), action = "store", type = "character", default = NULL,
+        help = "Input: VCF containing calls from a panel of normals, for example generated by GATK CombineVariants."),
     make_option(c("--maxmeancoverage"), action="store", type="integer", default=NULL,
         help="Maximum coverage (downscale samples exceeding this cutoff) [default auto]"),
     make_option(c("--assay"), action="store", type="character", default="",
@@ -26,8 +28,6 @@ if (opt$version) {
     message(as.character(packageVersion("PureCN")))
     q(status=1)
 }    
-
-force <- !is.null(opt$force)
 
 .checkFileList <- function(file) {
     files <- read.delim(file, as.is=TRUE, header=FALSE)[,1]
@@ -60,23 +60,46 @@ if (is.null(genome)) stop("Need --genome")
 
 flog.info("Loading PureCN...")
 if (length(coverageFiles)) {
-    suppressPackageStartupMessages(library(PureCN))
-    flog.info("Creating normalDB. Assuming coverage files are GC-normalized.")
-    normalDB <- createNormalDatabase(coverageFiles, max.mean.coverage=opt$maxmeancoverage)
-    saveRDS(normalDB, file=.getFileName(outdir,"normalDB",".rds", assay, 
-        genome))
+    output.file <- .getFileName(outdir,"normalDB",".rds", assay, genome)
+    if (file.exists(output.file) && !opt$force) {
+        flog.info("%s already exists. Skipping... (--force will overwrite)",
+            output.file)
+    } else {
+        suppressPackageStartupMessages(library(PureCN))
+        flog.info("Creating normalDB. Assuming coverage files are GC-normalized.")
+        normalDB <- createNormalDatabase(coverageFiles, max.mean.coverage=opt$maxmeancoverage)
+        saveRDS(normalDB, file = output.file)
+    }
 }
 
 if (length(coverageFiles) > 3) {
-    suppressPackageStartupMessages(library(PureCN))
     target.weight.file <- .getFileName(outdir,"target_weights",".txt", assay, 
         genome)
-    outpng.file <- sub("txt$","png", target.weight.file)
-    flog.info("Creating target weights.")
-    png(outpng.file, width=800, height=400)
-    createTargetWeights(normalDB$normal.coverage.files, 
-        target.weight.file, plot=TRUE)
-    dev.off()
+    if (file.exists(target.weight.file) && !opt$force) {
+        flog.info("%s already exists. Skipping... (--force will overwrite)",
+            target.weight.file)
+    } else {
+        suppressPackageStartupMessages(library(PureCN))
+        outpng.file <- sub("txt$","png", target.weight.file)
+        flog.info("Creating target weights.")
+        png(outpng.file, width=800, height=400)
+        createTargetWeights(normalDB$normal.coverage.files, 
+            target.weight.file, plot=TRUE)
+        dev.off()
+   }     
 } else {
     flog.warn("Not enough coverage files for creating target_weights.txt")
+}
+
+if (!is.null(opt$normal_panel)) {
+    output.file <- .getFileName(outdir,"mapping_bias",".rds", assay, genome)
+    if (file.exists(output.file) && !opt$force) {
+        flog.info("%s already exists. Skipping... (--force will overwrite)",
+            output.file)
+    } else {
+        suppressPackageStartupMessages(library(PureCN))
+        flog.info("Creating mapping bias database.")
+        bias <- calculateMappingBiasVcf(opt$normal_panel)
+        saveRDS(bias, file = output.file)
+    }
 }
