@@ -40,6 +40,9 @@ option_list <- list(
     make_option(c("--error"), action = "store", type = "double",
         default = formals(PureCN::runAbsoluteCN)$error,
         help = "VCF Filter: Estimated sequencing error rate for artifact filtering [default %default]"),
+    make_option(c("--padding"), action = "store", type = "integer",
+        default = formals(PureCN::filterVcfBasic)$interval.padding,
+        help = "VCF Filter: Keep variants in the flanking region of specified size [default %default]"),
     make_option(c("--funsegmentation"), action = "store", type = "character", default = "CBS",
         help = "Segmentation: Algorithm. CBS, PSCBS or none [default %default]"),
     make_option(c("--alpha"), action = "store", type = "double",
@@ -212,7 +215,8 @@ if (file.exists(file.rds) && !opt$force) {
             test.num.copy = seq(0, opt$maxcopynumber),
             sex = opt$sex,
             args.filterVcf = list(snp.blacklist = snp.blacklist,
-                af.range = af.range, stats.file = opt$statsfile),
+                af.range = af.range, stats.file = opt$statsfile,
+                interval.padding = opt$padding),
             fun.segmentation = fun.segmentation,
             args.segmentation = list(target.weight.file = opt$targetweightfile,
                 alpha = opt$alpha),
