@@ -28,3 +28,23 @@ test_that("Mapping bias with normal panel matches", {
     expect_error(setMappingBiasVcf(vcf, normal.panel.vcf.file = normal_panel, 
         min.normals = 1))
 })
+
+test_that("Precomputed mapping bias matches", {
+    normal_panel <- system.file("extdata", "normalpanel.vcf.gz", 
+        package = "PureCN")
+    mb <- calculateMappingBiasVcf(normal_panel)
+    ov <- findOverlaps(vcf, mb, select = "first")
+    idx <- !is.na(ov)
+    expect_equivalent(head(mb$pon.count[ov[idx]], 3), c(15, 5, 27))
+    expect_equal(head(mb$bias[ov[idx]],3), c(0.3362525, 1.0002354, 
+        1.0119481), tolerance = 0.001)
+
+    normal_panel_precomp <- tempfile(fileext = ".rds")
+    saveRDS(mb, file = normal_panel_precomp)
+    mb <- setMappingBiasVcf(vcf, normal.panel.vcf.file = normal_panel_precomp)
+    idx <- mb$pon.count > 0
+    expect_equal(head(mb$pon.count[idx], 3), c(15, 5, 27))
+    expect_equal(head(mb$bias[idx], 3), c(0.3362525, 1.0002354, 
+        1.0119481), tolerance = 0.001)
+    file.remove(normal_panel_precomp)
+})
